# generate-azure-blob-sas-urls

./: # .dockerignore  .gitignore  Dockerfile  README.md  config-template.json  generate-blob-sas-url.py  pyproject.toml  requirements.txt
.github/workflows/: dependency-review.yml
